# projeto_TCC

./: .gitignore  package.xml  setup.cfg  setup.py  test_yolo.py
launch/: yolo_realsense_launch.py
src/: inference.py  main.py  utils.py
src/yolo_realsense/: inference.py  main.py  utils.py  yolo_detector.py
