<?xml version="1.0"?>
<package format="3">
  <name>yolo_realsense</name>
  <version>0.1.0</version>
  <description>YOLOv8 + Intel RealSense integration for ROS2</description>
  <maintainer email="you@example.com">Seu Nome</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>python3-opencv</exec_depend>
</package>