<?xml version="1.0"?>
<package format="3">
  <name>yolo_realsense</name>
  <version>0.1.0</version>
  <description>YOLOv8 + Intel RealSense integration for ROS2</description>
  <maintainer email="marcopazinitortelli@gmail.com">Marco Tortelli</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>

  <exec_depend>ultralytics</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pyrealsense2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>